# fastapi-edu-hub

./: LICENSE  README.md  pyproject.toml
src/: config.py  main.py
src/api/v1/: __init__.py
src/api/v1/routers/: __init__.py  auth.py  courses.py  users.py
src/db/: custom_types.py  db.py
src/models/: answers.py  chapters.py  chapters_progresses.py  comments.py  courses.py  courses_progresses.py  lessons.py  lessons_progresses.py  questions.py  quizzes.py  users.py  users_answers.py
